@@ -1,6 +1,9 @@
 RC 4
 ====
 
+- Fixed IOC-67
+  "RemoveComponent needs to unwire handlers and remove them"
+
 - Fixed IOC-59
   "Child component unable to correctly resolve parent service added after the component"
 
